--- a/Bohao-s-Personal-Website/contact.html
+++ b/Bohao-s-Personal-Website/contact.html
@@ -14,14 +14,14 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
 
         <section>
             <h2>Contact Information</h2>
             <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>GitHub: <a href="https://github.com/yourgithubprofile">github.com/yourgithubprofile</a></p>
+            <p>GitHub: <a href="https://github.com/bohaocheneric">github.com/yourgithubprofile</a></p>
             <p>LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile">linkedin.com/in/yourlinkedinprofile</a></p>
         </section>
     </body>
