--- a/Bohao-s-Personal-Website/about.html
+++ b/Bohao-s-Personal-Website/about.html
@@ -11,10 +11,10 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="Bohao-s-Personal-Website/index.html">Home</a></li>
+                <li><a href="Bohao-s-Personal-Website/projects.html">Projects</a></li>
+                <li><a href="Bohao-s-Personal-Website/about.html">About</a></li>
+                <li><a href="Bohao-s-Personal-Website/contact.html">Contact</a></li>                
             </ul>
         </nav>
 
