--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Home - Bohao</title>
@@ -11,10 +12,10 @@
 
         <nav>
             <ul>
-                <li><a href="Bohao-C-Personal-Website/index.html">Home</a></li>
-                <li><a href="Bohao-C-Personal-Website/projects.html">Projects</a></li>
-                <li><a href="Bohao-C-Personal-Website/about.html">About</a></li>
-                <li><a href="Bohao-C-Personal-Website/contact.html">Contact</a></li>                   
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>                   
             </ul>
         </nav>
 
