--- a/about.html
+++ b/about.html
@@ -1,31 +1,32 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>About - Bohao</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1>About Bohao</h1>
-            <p>Learn more about Bohao's background and interests.</p>
-        </header>
+<head>
+    <title>About - Bohao</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <div class="title">About Bohao</div>
+        <div class="subtitle">Learn more about Bohao's background and interests.</div>
+    </header>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>                  
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>                  
+        </ul>
+    </nav>
 
-        <section>
-            <h2>Hobbies</h2>
-            <p>Bohao is working on this.</p>
-        </section>
+    <section>
+        <div class="section-title">Hobbies</div>
+        <div>Bohao is working on this.</div>
+    </section>
 
-        <section>
-            <h2>Social media</h2>
-            <p>Bohao is working on this.</p>
-        </section>
-    </body>
+    <section>
+        <div class="section-title">Social media</div>
+        <div>Bohao is working on this.</div>
+    </section>
+</body>
 </html>
