--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,29 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Contact - Bohao</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Contact Bohao</h1>
-            <p>Bohao is working on this.</p>
-        </header>
+<head>
+    <title>Contact - Bohao</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <div class="title">Contact Bohao</div>
+        <div class="subtitle">Bohao is working on this.</div>
+    </header>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>                        
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>                        
+        </ul>
+    </nav>
 
-        <section>
-            <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>GitHub: <a href="https://github.com/bohaocheneric">github.com/yourgithubprofile</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile">linkedin.com/in/yourlinkedinprofile</a></p>
-        </section>
-    </body>
+    <section>
+        <div class="section-title">Contact Information</div>
+        <div>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></div>
+        <div>GitHub: <a href="https://github.com/bohaocheneric">github.com/yourgithubprofile</a></div>
+        <div>LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile">linkedin.com/in/yourlinkedinprofile</a></div>
+    </section>
+</body>
 </html>
