--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Home - Bohao</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Bohao's Personal Website</h1>
-            <p>Welcome to my personal website where you can learn about my experience, education, and projects.</p>
-        </header>
+<head>
+    <title>Home - Bohao</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <div class="title">Bohao's Personal Website</div>
+        <div class="subtitle">Welcome to my personal website where you can learn about my experience, education, and projects.</div>
+    </header>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>                   
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>                   
+        </ul>
+    </nav>
 
-        <section>
-            <h2>Education</h2>
-            <p>Bohao graduated from NEU in Computer Science.</p>
-        </section>
+    <section>
+        <div class="section-title">Education</div>
+        <div>Bohao graduated from NEU in Computer Science.</div>
+    </section>
 
-        <section>
-            <h2>Experience</h2>
-            <p>Bohao is working on this.</p>
-        </section>
-    </body>
+    <section>
+        <div class="section-title">Experience</div>
+        <div>Bohao is working on this.</div>
+    </section>
+</body>
 </html>
