--- a/projects.html
+++ b/projects.html
@@ -1,35 +1,36 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Projects - Bohao</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Bohao's Projects</h1>
-            <p>Check out some of the projects I've worked on below.</p>
-        </header>
+<head>
+    <title>Projects - Bohao</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <div class="title">Bohao's Projects</div>
+        <div class="subtitle">Check out some of the projects I've worked on below.</div>
+    </header>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>                          
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>                          
+        </ul>
+    </nav>
 
-        <section class="projects">
-            <div>
-                <h3>Project 1</h3>
-                <p>Bohao is working on this</p>
-                <a href="https://github.com/yourprojectrepo">View on GitHub</a>
-            </div>
+    <section class="projects">
+        <div class="project">
+            <div class="project-title">Project 1</div>
+            <div>Bohao is working on this</div>
+            <a href="https://github.com/yourprojectrepo">View on GitHub</a>
+        </div>
 
-            <div>
-                <h3>Project 2</h3>
-                <p>Bohao is working on this</p>
-                <a href="https://github.com/yourprojectrepo2">View on GitHub</a>
-            </div>
-        </section>
-    </body>
+        <div class="project">
+            <div class="project-title">Project 2</div>
+            <div>Bohao is working on this</div>
+            <a href="https://github.com/yourprojectrepo2">View on GitHub</a>
+        </div>
+    </section>
+</body>
 </html>
