--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
 
     <section>
         <div class="section-title">Contact Information</div>
-        <div>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></div>
-        <div>GitHub: <a href="https://github.com/bohaocheneric">github.com/yourgithubprofile</a></div>
-        <div>LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile">linkedin.com/in/yourlinkedinprofile</a></div>
+        <div>Email: <a href="chen.boha@northeastern.edu">your.email@example.com</a></div>
+        <div>GitHub: <a href="https://github.com/BohaoChenEric">github.com/yourgithubprofile</a></div>
+        <div>LinkedIn: <a href="https://linkedin.com">linkedin.com/in/yourlinkedinprofile</a></div>
     </section>
 </body>
 </html>
