--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
     </nav>
 
     <section>
-        <div class="section-title">Hobbies</div>
-        <div>Bohao is working on this.</div>
+        <div class="section-title">Games currently being played</div>
+        <a href="https://worldofwarcraft.blizzard.com/en-us/">World Of Worldcraft</a>
     </section>
 
     <section>
