--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
     <section>
         <div class="section-title">Education</div>
-        <div>Bohao graduated from NEU in Computer Science.</div>
+        <div>Bohao will graduated from NEU in Computer Science this Dec.</div>
     </section>
 
     <section>
         <div class="section-title">Experience</div>
-        <div>Bohao is working on this.</div>
+        <div>See Linkedin</div>
     </section>
 </body>
 </html>
