--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <div class="title">Contact Bohao</div>
-        <div class="subtitle">Bohao is working on this.</div>
+        <div class="subtitle">See Contact Information</div>
     </header>
 
     <nav>
@@ -23,7 +23,7 @@
         <div class="section-title">Contact Information</div>
         <div>Email: <a href="chen.boha@northeastern.edu">chen.boha@northeastern.edu</a></div>
         <div>GitHub: <a href="https://github.com/BohaoChenEric">https://github.com/BohaoChenEric</a></div>
-        <div>LinkedIn: <a href="https://linkedin.com">linkedin</a></div>
+        <div>LinkedIn: <a href="https://www.linkedin.com/in/bohao-chen-220548182/">linkedin</a></div>
     </section>
 </body>
 </html>
